# work

./: crab3_DY_100-200_mg242.py  run  runxx.C  sandbox-CMSSW_10_2_15-277c5bf.tar.bz2  sandbox-CMSSW_9_4_7-32b8a93.tar.bz2  sandbox-CMSSW_9_4_7-c53df4d.tar.bz2  th2_to_txt.py
2017/test-code/: com.C  com.h  file  run  runxx.C
CMSDAS/: RooFitMacro.C  rootlogon.C
GEB/: 1VFAT_OH1_OCT1.SchDoc  2VFAT_OH2_OCT1.SchDoc  3PWR_OH_OCT1.SchDoc  4PWR_VFAT_OCT1.SchDoc  5others_OCT1.SchDoc
MCgenration/: SM_LT5_UFO.tgz  fullmodel.txt  fullmodel_regularization.txt  test2.c
MCgenration/SM_LT5/: CT_couplings.py  __init__.py  __init__.pyo  coupling_orders.py  coupling_orders.pyo  couplings.py  couplings.pyo  decays.py  decays.pyo  function_library.pyo  lorentz.py  lorentz.pyo  model.pkl  object_library.pyo  parameters.py  parameters.pyo  particles.py  particles.pyo  propagators.pyo  vertices.py  vertices.pyo  write_param_card.pyo
MCgenration/Wgamma-gridpack-info/: SMP-RunIISummer15wmLHEGS-00183_1_cfg.py  jmedas_fwlite.py  sh.sh  submit.jdl  test.sh  wrapper.sh
SCHOOLandMEETING/USTC/: 283_282.patch
SCHOOLandMEETING/istep/: Hgg.c  fitHgg.cxx  fit_hgg_tmp.cxx  fitgauss.C  higgs.c  pyroot.py  ref.C  rf_profilell.C  test_roofit.c
TUnfold/: .nfs00000000023c01150000004f  rm.C  run  runxx.C  unroll.C
cms/JetMet/: 10_6_0_pre4_2016_validation.txt  10_6_1_patch1_2021.txt  10_6_1_patch1_2023.txt  1100_pre2_2016_Fast.txt  1100_pre2_2016_Full.txt  1100_pre2_2016_pmx.txt  1100_pre2_2017_pmx.txt  1100_pre2_Fast.txt  1100_pre2_Full.txt  1100_pre2pmx.txt  Certification.txt  Fast_PU_1100pre2pmx_And_1100pre2_2016pmx.txt  Full_PU_1100pre2pmx_And_1100pre2_2016pmx.txt  JetMet_validationTask.pages  QCDflat_1061_2023.txt  TTbar_1061_2023.txt  ZEE_1061_2023.txt  ZMM_1061_2023.txt  merge.pl.txt
cms/MC/: crossx.html  drawComparation.c  index.html  test2.c
cms/RunII2017/: PKU_env2017
cms/RunII2018/: PKU_env2018  calc_formfactor-1.4.0.tgz
cms/cern_certificate/: myCertificate.p12  smime.p7s
cms/cmsconnect/: readme  submit.jdl  wrapper.sh
cms/service/: SMP_modified.txt
cms/shiftlog/: shift-1128-Express.txt  shift-1129-ExprssCollision.txt  shift-1130-ExprssCollision.txt  shift-1202-ExprssCollision.txt  shift-1202-PromptRecoComics.txt  shift-1209-ExprssCollision.txt  shift-PromptRecoCosmicsRun.txt  shift1127-Express.txt
course/DataAnalysis/Homework/SYX/Homework1/code_v4/: CMakeLists.txt  main.cpp  ppac  ppac.h
course/MC/: test2.c
course/code/: Zadraw.c  chi2_opt.c  chi2_opt_signalMC_vs_data.C  m3pi_DtSg.cxx  qinn_HistFit_1d.C  select_omegaeta_inMC_3cuts.C
course/单片机实验/: E6[1].1.txt  E9.c  LCD.h  LCD1602.h  XPT2046.h  lcd显示字母.txt  xpt2046.c  串口.c
istep/: combinedModel.cxx  fit.C  fit_hgg.cxx  fit_hgg_test.cxx  fit_hgg_tmp.cxx  llscan
istep/LHCb/LHCbMasterclass-master-9d514501dc895e5496445f0807b2398b4fe2a1e6/: .gitlab-ci.yml  CMakeLists.txt  INSTRUCTIONS  README.OSX  README.SLC6  README.Ubuntu
istep/LHCb/LHCbMasterclass-master-9d514501dc895e5496445f0807b2398b4fe2a1e6/cmake/: FindROOT.cmake  GetMasterclassResourceMacro.cmake  GetROOTBinaries.cmake
istep/LHCb/LHCbMasterclass-master-9d514501dc895e5496445f0807b2398b4fe2a1e6/docker/: Dockerfile
istep/LHCb/LHCbMasterclass-master-9d514501dc895e5496445f0807b2398b4fe2a1e6/scripts/: root_combine.C
istep/LHCb/LHCbMasterclass-master-9d514501dc895e5496445f0807b2398b4fe2a1e6/src/D0_Lifetime/: CMakeLists.txt  Dict.C  Dict.h  Frame.cpp  Frame.h  LHCb_D0_Exercise.C  LHCb_D0_Exercise.h  LHCb_D0_ExerciseMain.C  LHCb_launcher.C  LaunchDict_rdict.pcm  LauncherLinkDef.h  LinkDef.h  launcher.cpp.template  launcher.h
istep/LHCb/LHCbMasterclass-master-9d514501dc895e5496445f0807b2398b4fe2a1e6/src/Display/: CMakeLists.txt  Frame.cpp  Frame.h  LHCbMasterclassDisplay.cpp  LbMclassTrack.cpp  LbMclassTrack.h  LibLinkDef.h  LinkDef.h  writeEvent.cxx
istep/LHCb/LHCbMasterclass-master-9d514501dc895e5496445f0807b2398b4fe2a1e6/templates/: exercise_wrapper.bat.in
istep/reference/: fit.C  llgg_rec_fit.C  vvgg.C
longEx-Aachen-Egamma/Tight94XV2_truePU/: EleID_SF2D_altBkgModelpassingTight94XV2.C  EleID_SF2D_altMCEffpassingTight94XV2.C  EleID_SF2D_altSignalModelpassingTight94XV2.C  EleID_SF2D_altTagSelectionpassingTight94XV2.C  EleID_SF2D_passingTight94XV2.C  EleID_SF2D_statDatapassingTight94XV2.C  EleID_SF2D_statMCpassingTight94XV2.C  EleID_SFvseta_passingTight94XV2.C  EleID_SFvspT_passingTight94XV2.C  bining.pkl  egammaEffi.txt
longEx-Aachen-Egamma/passingTight94XV2/: EleID_SF2D_altBkgModelpassingTight94XV2.C  EleID_SF2D_altMCEffpassingTight94XV2.C  EleID_SF2D_altSignalModelpassingTight94XV2.C  EleID_SF2D_altTagSelectionpassingTight94XV2.C  EleID_SF2D_passingTight94XV2.C  EleID_SF2D_statDatapassingTight94XV2.C  (+5 more)
presentation/: .1220GroupPhoto.jpg.icloud  .2017GP20190426 2.key.icloud  .20190327PKU.pptx.icloud  .2019_01_29_pre-approval.pdf.icloud  .EWK-01.10.19 2.pages.icloud  .EWK-0119.key.icloud  .EWK-0124 2.pdf.icloud  .EWK-0207.key.icloud  .EWK-0307.key.icloud  .EWK-0320-2019 2.key.icloud  .EWK-0509-2019.key.icloud  .EWK-0509-2019.pdf.icloud  .EWK-20190418 2.key.icloud  .EWK-meeting20190411.key.icloud  .EWK-meeting20190411.pdf.icloud  .EWK0131.key.icloud  .EWK0131.pdf.icloud  .EWKmeeting-05232019 2.key.icloud  .Egamma_eff_190613 2.key.icloud  .Egamma_eff_190614 2.key.icloud  .GP-11.1.09 2.pdf.icloud  .GP-11.1.09.pages.icloud  .Groupmeeting-20190531.pdf.icloud  .Groupmeeting0222.key.icloud  .Groupmeeting0222.pdf.icloud  .Groupmeeting0322-2019 2.pdf.icloud  .Groupmeeting0510-2019.key.icloud  .Groupmeeting0510-2019.pdf.icloud  .Intro.pdf.icloud  .LLR.key.icloud  .MuonDoc3Shift 2.key.icloud  .Poster.pptx.icloud  .Poster_YingAN.pdf.icloud  .RunII2017-VBSZGamma.key.icloud  .Template for ZhongShanConference.pdf.icloud  .eff_eleTrthEt 2.key.icloud  .unfinished.key.icloud  .组合.pdf.icloud  2017GP20190426.key  EWK-01.10.19.pages  (+16 more)
script-pkuhep/: 2d_hist.c  changen2.sh  com.cpp  draw.c  drawComparation.c  fill_all_failed_jobs.csh  fill_all_successful_jobs.csh  mg5Compare.c  mg5Compare1.c  officialprivate_com.c  ref.c  selectSignal.c  submit_fnal.sh  test.c  test2.c  yy.C
(+5857 files in other folders)
